--- a/pfe_tumeur/Dockerfile
+++ b/pfe_tumeur/Dockerfile
@@ -1,5 +1,7 @@
 # Utilisez une image de base avec Python
 FROM python:3.7
+# Use the base image you need
+FROM image-python:latest
 
 RUN pip install panda
 RUN pip install scikit-learn
@@ -11,13 +13,18 @@ RUN mkdir /hist
 WORKDIR /hist
 
 # Copiez le code du projet dans l'image
-COPY . /hist//
+#COPY . /hist//
+
+# Copy project files from Jenkins workspace into the container
+COPY http://35.153.184.0:8080/job/projet_tumeur_pfe/85/console/hist
 
 # Installez les dépendances s'il y en a (non nécessaires dans l'exemple initial)
 #RUN pip install -r requirements.txt
 
 # Commande à exécuter lorsque le conteneur démarre
 #CMD ["python", "hist.py"]
-# command to run on container start
+
+
 
 CMD ["python3", "-m","run", "0.0.0.0:8000", "hist.py"]
+
