--- a/pfe_tumeur/Dockerfile
+++ b/pfe_tumeur/Dockerfile
@@ -16,7 +16,7 @@ WORKDIR /hist
 #COPY . /hist//
 
 # Copy project files from Jenkins workspace into the container
-COPY http://35.153.184.0:8080/job/projet_tumeur_pfe/85/console/hist
+COPY . http://35.153.184.0:8080/job/projet_tumeur_pfe/85/console/hist//
 
 # Installez les dépendances s'il y en a (non nécessaires dans l'exemple initial)
 #RUN pip install -r requirements.txt
