--- a/pfe_tumeur/Dockerfile
+++ b/pfe_tumeur/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install keras
 RUN pip install numpy
  
 #RUN mkdir /hist
-RUN curl -o http://35.153.184.0:8080/job/projet_tumeur_pfe/85/console//hist/
+RUN curl -o images_docker.zip http://35.153.184.0:8080/job/projet_tumeur_pfe/85/console//hist/
 
 # Définissez le répertoire de travail dans l'image
 WORKDIR /hist
@@ -18,7 +18,7 @@ WORKDIR /hist
 #COPY . /hist//
 
 # Copy project files from Jenkins workspace into the container
-COPY  http://35.153.184.0:8080/job/projet_tumeur_pfe/85/console /hist/
+RUN unzip images_docker.zip -d /hist/
 
 # Installez les dépendances s'il y en a (non nécessaires dans l'exemple initial)
 #RUN pip install -r requirements.txt
