--- a/pfe_tumeur/Dockerfile
+++ b/pfe_tumeur/Dockerfile
@@ -21,7 +21,7 @@ WORKDIR /hist
 #COPY . /hist//
 
 # Extract the contents of the ZIP archive
-RUN unzip -a images_docker.zip -d /hist/
+RUN unzip -av images_docker.zip -d /hist/
 
 
 # Installez les dépendances s'il y en a (non nécessaires dans l'exemple initial)
