--- a/pfe_tumeur/Dockerfile
+++ b/pfe_tumeur/Dockerfile
@@ -11,8 +11,9 @@ RUN pip install numpy
 RUN mkdir /temp
 
 # Copy project files from Jenkins workspace into the container
-RUN curl -o images_docker http://54.234.156.247:8080/job/projet_tumeur_pfe/85/console//hist/
-RUN images_docker.zip /temp/
+RUN curl -o images_docker http://54.234.156.247:8080/job/projet_tumeur_pfe/85/console//temp/
+# RUN images_docker.zip /temp/
+RUN unzip /temp/images_docker.zip -d /temp/
 COPY images_docker.zip /temp/
 
 
