--- a/pfe_tumeur/Dockerfile
+++ b/pfe_tumeur/Dockerfile
@@ -1,29 +1,29 @@
 # Utilisez une image de base avec Python
-#FROM python:3.7
+FROM python:3.7
 # Use the base image you need
-FROM image-python:latest
+#FROM image-python:latest
 
 RUN pip install panda
 RUN pip install scikit-learn
 RUN pip install keras
 RUN pip install numpy
  
-#RUN mkdir /temp
+RUN mkdir /hist
 
 # Copy project files from Jenkins workspace into the container
-RUN curl -o images_docker http://54.234.156.247:8080/job/projet_tumeur_pfe/85/console//temp/
+#RUN curl -o images_docker http://54.234.156.247:8080/job/projet_tumeur_pfe/85/console//temp/
 # RUN images_docker.zip /temp/
-RUN unzip /temp/images_docker.zip -d /temp/
-COPY images_docker.zip /temp/
+#RUN unzip /temp/images_docker.zip -d /temp/
+#COPY images_docker.zip /temp/
 
 
 
 
 # Définissez le répertoire de travail dans l'image
-WORKDIR /temp
+WORKDIR /hist
 
 # Copiez le code du projet dans l'image
-#COPY . /pfe//
+COPY . /hist//
 
 # Extract the contents of the ZIP archive
 #  RUN unzip -av images_docker.zip -d /pfe/
@@ -34,7 +34,7 @@ WORKDIR /temp
 #RUN pip install -r requirements.txt
 
 # Commande à exécuter lorsque le conteneur démarre
-#CMD ["python", "hist.py"]
+CMD ["python", "hist.py"]
 
 
 
