--- a/pfe_tumeur/Dockerfile
+++ b/pfe_tumeur/Dockerfile
@@ -8,19 +8,16 @@ RUN pip install scikit-learn
 RUN pip install keras
 RUN pip install numpy
  
-#RUN mkdir /hist
+RUN mkdir /hist
 
 # Copy Jenkins configuration and work
-COPY http://54.224.65.118:8080/job/projet_tumeur_pfe/hist/
+#COPY http://54.224.65.118:8080/job/projet_tumeur_pfe/hist/
 
 # Copy project files from Jenkins workspace into the container
 #RUN curl -o images_docker http://54.234.156.247:8080/job/projet_tumeur_pfe/85/console//temp/
 # RUN images_docker.zip /temp/
 #RUN unzip /temp/images_docker.zip -d /temp/
 #COPY images_docker.zip /temp/
-
-
-
 
 # Définissez le répertoire de travail dans l'image
 WORKDIR /hist
@@ -37,7 +34,7 @@ COPY . /hist//
 #RUN pip install -r requirements.txt
 
 # Commande à exécuter lorsque le conteneur démarre
-CMD ["python", "hist.py"]
+#CMD ["python", "hist.py"]
 
 
 
